test/cli/test-mutating-policy/exceptions-exclude-images/patched-allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: test
    imageExcluded: "true"
  name: pod-with-allowed-image
  namespace: default
spec:
  containers:
  - image: nginx:latest
    name: container01
    resources: {}
