test/cli/test-mutating-policy/exceptions-exclude-images/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
exceptions:
- exception.yaml
kind: Test
metadata:
  name: mpol-exceptions-exclude-images
policies:
- policy.yaml
resources:
- resource.yaml
results:
- isMutatingPolicy: true
  kind: Pod
  patchedResources: patched-allowed.yaml
  policy: mpol-exclude-images
  resources:
  - default/pod-with-allowed-image
  result: pass
- isMutatingPolicy: true
  kind: Pod
  patchedResources: patched-non-allowed.yaml
  policy: mpol-exclude-images
  resources:
  - default/pod-with-non-allowed-image
  result: pass
